# autom8

./: .env.docker.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Package::query()->count();  README.md  RELEASE.md  SECURITY.md  ave();  boost.json  composer.json  docker-compose.dev.yml  docker-compose.prod.yml  fix-permissions.sh  olved = $resolver->resolve($selection);  olver = app(AppServicesAutom8BuildSelectionResolver::class);  package-lock.json  phpunit.xml  set($resolved)  tBuilder = app(AppServicesAutom8BuildManifestBuilder::class);  tro->save();
catalog/: distros.yaml  packages.yaml  profiles.yaml  (+1 more)
suite/: Cargo.toml  README.md
suite/apps/autom8-cli/: Cargo.toml
suite/apps/autom8-cli/src/: banner.rs  cli.rs  main.rs
suite/apps/autom8-gnome/: Cargo.toml
suite/apps/autom8-gnome/data/: br.com.oslabs.AutoM8.desktop
suite/apps/autom8-gnome/src/: main.rs
suite/catalog/: apps-fedora.yaml  apps-ubuntu.yaml  apps.json  external-repos.yaml  flatpak.yaml  profiles.json  snap.yaml
suite/catalog/apps/: containers.json  desenvolvimento.json  design.json  escritorio.json  games.json  midia.json  produtividade.json  rede.json  sistema.json  usuario-local.json
suite/config/: autom8.conf.example
suite/core/: config.sh  constants.sh  detect.sh  help.sh  logger.sh  sudo.sh  summary.sh  ui.sh
suite/crates/autom8-core/: Cargo.toml
suite/crates/autom8-core/src/: bootstrap.rs  lib.rs  navigation.rs  status.rs
suite/docs/: help.txt
suite/docs/help/: apps.txt  backup.txt  clean.txt  config.txt  diagnose.txt  docker.txt  doctor.txt  menu.txt  profiles.txt  report.txt  security.txt  self-update.txt  update.txt  upgrade-distro.txt  users.txt  version.txt
suite/i18n/: en-US.yaml  pt-BR.yaml
suite/lib/apps/: catalog.sh  install.sh  menu.sh  module.sh  packages.sh  remove.sh
suite/modules/: apps.sh  backup.sh  clean.sh  config_menu.sh  diagnose.sh  docker.sh  doctor.sh  profiles.sh  report.sh  security.sh  self_update.sh  update.sh  upgrade_distro.sh  users.sh
suite/profiles/: admin-sistemas.yaml  desenvolvedor.yaml  designer.yaml  devops.yaml  domestico.yaml  gamer.yaml  servidor-vps.yaml
(+154 files in other folders)
