[package]
name = "autom8-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Contratos compartilhados do AutoM8"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
